@@ -58,13 +58,19 @@ public class CassandraConfig extends AbstractCassandraConfiguration {
 
     @Override
     protected List<String> getStartupScripts() {
-        return Collections.singletonList(
+        return List.of(
                 "CREATE TABLE IF NOT EXISTS " + keyspaceName + ".ratings (" +
                         "song_id text, " +
                         "user_id text, " +
                         "value int, " +
                         "created_at timestamp, " +
                         "PRIMARY KEY ((song_id), user_id)" +
+                        ");",
+
+                "CREATE TABLE IF NOT EXISTS " + keyspaceName + ".rating_stats (" +
+                        "song_id text PRIMARY KEY, " +
+                        "average_rating double, " +
+                        "total_ratings int" +
                         ");"
         );
     }
